# hack_bio_cam

./: .dockerignore  .env.example  Dockerfile  README.md  coolsense_model.pt  docker-compose.yml  main.py  package-lock.json  presentation_script.md  pyproject.toml  train.py
.github/workflows/: ci.yml
apps/dashboard/: README.md  __init__.py  app.py  client.py
contracts/: openapi.json
docs/: backend_setup.md  demo_flow.md
scripts/: demo_run.sh  export_openapi.py  seed_demo_data.py  verify_demo.py
src/coolsense/: __init__.py
src/coolsense/api/: __init__.py  app.py  deps.py  errors.py  middleware.py  schemas.py
src/coolsense/api/routes/: controls.py  events.py  forecast.py  model.py  state.py  stream.py
src/coolsense/auth/: api_key.py
src/coolsense/config/: __init__.py  defaults.py  settings.py
src/coolsense/observability/: logging.py  metrics.py
src/coolsense/optimizer/: __init__.py  inference.py  nn.py  reasoning.py  score.py  training.py
src/coolsense/orchestrator/: loop.py  service.py
src/coolsense/providers/: __init__.py  base.py  simulator.py  websocket_ingest.py
src/coolsense/simulator/: __init__.py  simulator.py
src/coolsense/storage/: __init__.py  db.py  models.py  ring_buffer.py
src/coolsense/streaming/: __init__.py  manager.py
src/coolsense/twin/: __init__.py  biocide.py  blowdown.py  concentration.py  corrosion.py  forecast.py  phosphorus.py  state.py
tests/: test_api_smoke.py  test_forecast.py  test_optimizer.py  test_reproducibility.py  test_score.py  test_simulator.py  test_smoke.py  test_twin.py  test_websocket.py
